# sde-mcp

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEVELOPERS_GUIDE.md  Dockerfile.sde-mcp-server  LICENSE  README.md  SUPPORTED_PROMPTS.md  WORKFLOW.md  build-mcpb.sh  docker-compose.yml  env.example  gitignore  kj-github-sde-mcp.code-workspace  manifest.json  package-lock.json  package.json  pyproject.toml  rebuild-client-ui.ps1  rebuild-client-ui.sh  sde-mcp.code-workspace  server.json  test_import.py  tsconfig.json  vitest.config.ts
.cursor/: README.md  mcp.json.example
.cursor/rules/: github-operations.md  markdown-files-to-docs-folder.mdc
.github/workflows/: ci.yaml
client-ui/: Dockerfile  README.md
client-ui/static/: app.js  index.html  styles.css  test-links.html
docs/: ARCHITECTURE.md  CLICKABLE_URLS.md  DEPLOYMENT.md  DEVELOPERS_GUIDE.md  DOCKER_DEPLOYMENT.md  PROTOTYPE_README.md  QUICK_START.md  WORKFLOW.md  context_retention_system.md
mcp-proxy-service/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
mcp-proxy-service/app/: __init__.py  claude_adapter.py  claude_formatter.py  config.py  main.py  mcp_client.py  models.py  redis_client.py  response_formatter.py
mcp-proxy-service/config/: env.example
mcp-proxy-service/tests/: __init__.py  conftest.py  test_e2e_bu_context.py  test_e2e_context.py  test_redis_client.py
mock-seaglass/: Dockerfile  README.md  requirements.txt
mock-seaglass/app/: __init__.py  main.py
mock-seaglass/config/: env.example
src/: httpServer.ts  index.ts  main.ts
src/sde_mcp_server/: __init__.py  __main__.py  api_client.py  server.py
src/sde_mcp_server/streamable_http_server/: CHANGES.md  CLAUDE_DESKTOP_SETUP.md  README.md  sample_claude_client..py  sample_server.py  sde_client.py
src/sde_mcp_server/tools/: __init__.py  _base.py  applications.py  business_units.py  countermeasures.py  diagrams.py  generic.py  projects.py  reports.py  scans.py  surveys.py  users.py
src/tools/: applications.ts  businessUnits.ts  countermeasures.ts  diagrams.ts  generic.ts  project.ts  reports.ts  scans.ts  surveys.ts  tools.test.ts  users.ts
src/utils/: apiClient.test.ts  apiClient.ts  mappings.test.ts
tests/: .env.example  MCP_INSPECTOR_TESTING.md  README.md  README_INSTALLATION.md  README_PROMPT_MAPPING.md  TESTING_GET_ANSWER_DETAILS.md  __init__.py  conftest.py  prompts_tool_mapping.csv  requirements-dev.txt  requirements.txt  show_tested_tools.py  test_get_answer_details_from_ids.py  test_prompt_mapping_from_csv.py  validate_csv.py
tests/integration/: __init__.py  test_prompt_to_tool_mapping.py
tests/tools/: allToolsRegistered.test.ts
