[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sde-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for SD Elements API integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "SD Elements MCP Server" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "sd-elements",
    "security",
    "api",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.13.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
# Development tools (formatting, linting, type checking)
dev = [
    "black",
    "isort",
    "mypy",
]

# Unit test dependencies (fast, no external services)
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "python-dotenv>=1.0.0",  # For loading .env files in tests
]

# Integration test dependencies (requires OpenAI API key)
# NOTE: These are ONLY needed for running integration tests
# The MCP server itself does NOT require these libraries
integration = [
    "openai>=1.0.0",
]

# All test dependencies (unit + integration)
test-all = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "openai>=1.0.0",
]

# Complete development environment
dev-all = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sde-mcp-server"
Repository = "https://github.com/your-org/sde-mcp-server"
Documentation = "https://github.com/your-org/sde-mcp-server#readme"
Issues = "https://github.com/your-org/sde-mcp-server/issues"

[project.scripts]
sde-mcp-server = "sde_mcp_server.__main__:main_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/sde_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sde_mcp_server"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
# Skip integration tests by default (use -m integration to run them)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]  # Add src to path so tests can import sde_mcp_server
addopts = "-v --cov=sde_mcp_server --cov-report=term-missing -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires LLM API key)",
    "unit: marks tests as unit tests",
] 